# flexiv_bin_packing

./: .gitignore  README.md  launch.txt
src/bin_packer/: package.xml  setup.cfg  setup.py
src/bin_packer/bin_packer/: bin_packer_node.py  bin_packing.py  matplotlib_ros.py  matplotlib_ros_new.py
src/bin_packer/config/: packing_example.txt
src/bin_packing_msgs/: CMakeLists.txt  package.xml
src/bin_packing_msgs/action/: Trigger.action
src/bin_packing_msgs/msg/: BoxDetail.msg  EulerPose.msg  Shape.msg
src/bin_packing_msgs/srv/: GetAllAruco.srv  GetAllBoxDetail.srv  GetAllChArUco.srv  GetArucoPose.srv  GetChArUcoPose.srv  GetFMBoxDetail.srv  GetNextCoordinate.srv  GetNextPose.srv  GetPixelPoint.srv  MoveJ.srv  MoveL.srv  MoveRelative.srv  SetBox.srv  SetItem.srv  TransferItem.srv
src/flexiv_description/launch/: view_rizon.launch.py
src/master_controller/: package.xml  setup.cfg  setup.py
src/master_controller/config/: orig.yaml  runtime_config.yaml  setup.urdf
src/master_controller/launch/: operation.launch.py
src/master_controller/master_controller/: bin_packer_smach.py  bt.xml  master_controller_node.py  stepwise_master_controller_charuco_node.py  stepwise_master_controller_node.py  stepwise_master_controller_pcl_node.py  tree_debug.py
src/motion_server/: package.xml  setup.cfg  setup.py
src/motion_server/motion_server/: motion_server_node.py  test_joint_publisher.py
src/vision_server/: CMakeLists.txt  package.xml
src/vision_server/config/: box_finder.yaml
src/vision_server/include/vision_server/: box_finder.hpp  box_finder_working.hpp  pcl_utils.hpp
src/vision_server/launch/: box_finder.launch.py
src/vision_server/scripts/: aruco_reader.py  box_finder_pcl.py  camera_tf_handler.py  charuco_reader.py  test_realsense.py
src/vision_server/src/: box_finder.cpp  box_finder_node.cpp  pcl_utils.cpp  pcl_utils_node.cpp
